<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MapsActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.gms.maps.MapView
            android:id="@+id/map"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:apiKey="@string/google_maps_key" />

        <FrameLayout
            android:id="@+id/map_overlay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white_alpha">

            <ImageView
                android:id="@+id/centerPoint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/center_marker"
                android:src="@drawable/ic_add_24" />
        </FrameLayout>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        map:layout_behavior="@string/bottom_sheet_behavior">

        <include
            android:id="@+id/bottom_sheet_layout"
            layout="@layout/location_form_bottomsheet_layout" />

    </FrameLayout>

    <Button
        android:id="@+id/currentLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="current Location" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_margin="@dimen/floating_button_margin"
        android:backgroundTint="@color/purple_700"
        android:contentDescription="@string/floating_button"
        android:src="@drawable/ic_add_24"
        map:borderWidth="@dimen/floating_button_stroke"
        map:layout_anchor="@id/sheet"
        map:layout_anchorGravity="top|end"
        map:layout_constraintBottom_toBottomOf="parent"
        map:layout_constraintRight_toRightOf="parent" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>