<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/bottom_sheet">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_padding"
        android:background="@color/white"
        android:paddingHorizontal="@dimen/layout_padding"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/labelPropertyName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_margin"
            android:hint="@string/property_name">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:singleLine="true"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/labelPropertyCoordinate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            android:layout_margin="@dimen/layout_margin"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/property_coordinate">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:lines="2"
                android:clickable="false"
                android:focusableInTouchMode="false"
                android:gravity="start"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            android:text="@string/submit"
            android:paddingHorizontal="@dimen/corner_radius"
            android:paddingVertical="@dimen/layout_padding"
            android:textColor="@color/white"
            app:cornerRadius="@dimen/corner_radius"
            android:layout_gravity="center_horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/labelPropertyCoordinate" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>